# CScratch

./: CMakeLists.txt  READEME.md
src/headers/: costume.hpp  scratch.hpp  sprite.hpp  utilities.hpp
src/source files/: costume.cpp  image.cpp  main.cpp  scratch.cpp  sprite.cpp  window.cpp
